2004-06-05  Sven Neumann  <sven@gimp.org>
	* app/paint/gimppaintcore.c
	* app/paint-funcs/paint-funcs-generic.h
	* app/paint-funcs/paint-funcs.[ch]: applied a patch from Philip
	Lafleur that changes the way that paint is applied during a paint
	stroke. Fixes bug #124225.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13530 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* app/paint/gimppaintcore.c
+	* app/paint-funcs/paint-funcs-generic.h
+	* app/paint-funcs/paint-funcs.[ch]: applied a patch from Philip
+	Lafleur that changes the way that paint is applied during a paint
+	stroke. Fixes bug #124225.
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/Makefile.am
 	* plug-ins/common/plugin-defs.pl
 	* plug-ins/common/glob.c: added a simple glob plug-in based on
