2004-06-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/unsharp.c: applied a modified patch from Geert
	Jordaens that adds a preview to the Unsharp Mask plug-in. Fixes
	bug #140974.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13531 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/unsharp.c: applied a modified patch from Geert
+	Jordaens that adds a preview to the Unsharp Mask plug-in. Fixes
+	bug #140974.
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* app/paint/gimppaintcore.c
 	* app/paint-funcs/paint-funcs-generic.h
 	* app/paint-funcs/paint-funcs.[ch]: applied a patch from Philip
