--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/sgi/sgi.c: applied a patch from Philip Lafleur that
+	makes the plug-in handle images with more than 4 channels. At the
+	moment the extra information is discarded (bug #143673).
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/unsharp.c: applied a modified patch from Geert
 	Jordaens that adds a preview to the Unsharp Mask plug-in. Fixes
 	bug #140974.
