2004-06-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/curve_bend.c: applied a patch from Henrik Brix
	Andersen that tells the user that Curve Bend cannot operate on
	layers with masks instead of silently applying the mask
	(bug #134748).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13535 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/curve_bend.c: applied a patch from Henrik Brix
+	Andersen that tells the user that Curve Bend cannot operate on
+	layers with masks instead of silently applying the mask
+	(bug #134748).
+
+2004-06-05  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/plugin-defs.pl
 	* plug-ins/common/Makefile.am
 	* plug-ins/common/gauss_iir.c
