--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/gauss.c (query): register the menu entry the new
+	way and install a mnemonic for Gaussian Blur.
+
 2004-06-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/curve_bend.c: applied a patch from Henrik Brix
