2004-06-06  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/gauss.c (gauss): fixed a stupid cut'n'paste bug
	I introduced yesterday.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13537 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-06  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/gauss.c (gauss): fixed a stupid cut'n'paste bug
+	I introduced yesterday.
+
+2004-06-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/gauss.c (query): register the menu entry the new
 	way and install a mnemonic for Gaussian Blur.
 
