--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-07  Sven Neumann  <sven@gimp.org>
+
+	* app/menus/plug-in-menus.c (plug_in_menus_setup): sort the menus
+	by the translated menu path stripped from underscores.
+
 2004-06-06  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/gauss.c (gauss): fixed a stupid cut'n'paste bug
