--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-07  Sven Neumann  <sven@gimp.org>
+
+	* de.po: some updates to the german translation.
+
 2004-06-03  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: corrected italian translation.
