2004-06-07  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/tileit.c (tileit_dialog): fixed a typo.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13542 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-07  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/tileit.c (tileit_dialog): fixed a typo.
+
+2004-06-07  Sven Neumann  <sven@gimp.org>
+
 	* app/menus/plug-in-menus.c (plug_in_menus_setup): sort the menus
 	by the translated menu path stripped from underscores.
 
