Added Catalan translation by Xavier BeÃ  <xbea@pie.xtec.es>.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13555 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-08  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Added Catalan translation by
+	Xavier Beà <xbea@pie.xtec.es>.
+
 2004-05-28  Andras Timar  <timar@gnome.hu>
 
 	* Makefile.am (tips_POFILES): added hu.po (Hungarian).
