2004-06-08  Sven Neumann  <sven@gimp.org>
	* Makefile.am (tips_POFILES): added ca.po (Catalan).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13558 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added ca.po (Catalan).
+
 2004-06-08  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Added Catalan translation by
