--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-08  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: updated italian translation.
+
 2004-06-07  Sven Neumann  <sven@gimp.org>
 
 	* de.po: minimal updates.
