2004-06-09  Sven Neumann  <sven@gimp.org>
	* app/actions/select-actions.c (select_actions_update): "Save to
	Channel" makes sense without a selection also, so don't set it
	insensitive.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13560 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-09  Sven Neumann  <sven@gimp.org>
+
+	* app/actions/select-actions.c (select_actions_update): "Save to
+	Channel" makes sense without a selection also, so don't set it
+	insensitive.
+
 2004-06-07  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/glob.c: the glob(3) function is not available on
