2004-06-09  Sven Neumann  <sven@gimp.org>
	* menus/image-menu.xml.in: added "Selection Editor" to the
	Selection menu. Still hoping for the great menu reorganization
	though...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13561 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-09  Sven Neumann  <sven@gimp.org>
 
+	* menus/image-menu.xml.in: added "Selection Editor" to the
+	Selection menu. Still hoping for the great menu reorganization
+	though...
+
 	* app/actions/select-actions.c (select_actions_update): "Save to
 	Channel" makes sense without a selection also, so don't set it
 	insensitive.
