--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-08 Pablo G. del Campo <pablodc@bigfoot.com>
+                                                                                                                          
+        * es.po: Updated Spanish translation by
+                 Francisco Vila <francisco.vila@hispalinux.es>.
+
 2004-06-08  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: updated italian translation.
