--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-06-09  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimppenciltool.c (gimp_pencil_tool_init): no need
+	request GIMP_MOTION_MODE_EXACT here since the parent class does
+	that already.
+
+	* app/tools/gimpinktool.c (gimp_ink_tool_init): ditto. Enable the
+	color picker feature for the ink tool.
+
+2004-06-09  Sven Neumann  <sven@gimp.org>
+
 	* menus/image-menu.xml.in: added "Selection Editor" to the
 	Selection menu. Still hoping for the great menu reorganization
 	though...
