--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-09  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimpcoords.[ch]: renamed gimp_coords_length2 to
+	gimp_coords_length_squared.
+
+	* app/vectors/gimpbezierstroke.c: Changed accordingly
+
 2004-06-09  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimppenciltool.c (gimp_pencil_tool_init): no need to
