2004-06-10  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimptemplateeditor.[ch]: added an API to
	expand/collapse the "Advanced Options" frame.

	* app/gui/preferences-dialog.c
	* app/widgets/gimphelp-ids.h: applied a patch done by William
	Skaggs that cleans up and reorganizes the Preferences dialog
	(bug #144060).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13568 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-06-10  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimptemplateeditor.[ch]: added an API to
+	expand/collapse the "Advanced Options" frame.
+
+	* app/gui/preferences-dialog.c
+	* app/widgets/gimphelp-ids.h: applied a patch done by William
+	Skaggs that cleans up and reorganizes the Preferences dialog
+	(bug #144060).
+
 2004-06-09  Simon Budig  <simon@gimp.org>
 
 	* app/core/gimpcoords.[ch]: renamed gimp_coords_length2 to
