--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-06-10  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/widgets-enums.h (enum GimpCursorModifier):
+	s/GIMP_LAST_CURSOR_MODIFIER_ENTRY/GIMP_CURSOR_MODIFIER_LAST/.
+
+	* app/widgets/gimpcursor.c: changed accordingly. Renamed struct
+	GimpBitmapCursor to GimpCursor. More cleanup.
+
+2004-06-10  Michael Natterer  <mitch@gimp.org>
+
 	* app/actions/image-actions.c
 	* app/actions/image-commands.[ch]
 	* app/actions/layers-actions.c
