--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-10  Gustavo Noronha Silva  <kov@debian.org>
+
+	* pt_BR.po: translation update by
+	  "Joao S. O. Bueno" <gwidion@mpc.com.br>
+
 2004-06-08 Pablo G. del Campo <pablodc@bigfoot.com>
                                                                                                                           
         * es.po: Updated Spanish translation by
