2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/paint/gimppaintoptions.[ch]: renamed all "pressure-pressure"
	variables to "pressure-hardness".

	* app/paint/gimpairbrush.c:
	* app/tools/gimppaintoptions-gui.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13578 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/paint/gimppaintoptions.[ch]: renamed all "pressure-pressure"
+	variables to "pressure-hardness".
+
+	* app/paint/gimpairbrush.c:
+	* app/tools/gimppaintoptions-gui.c: changed accordingly.
+
 2004-06-10  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpcolorarea.c: replaced destroy() by
