2004-06-12  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphistogrameditor.c (gimp_histogram_editor_init):
	set the initially selected channel on the histogram combobox.
	Fixes bug #144225.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13579 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-12  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphistogrameditor.c (gimp_histogram_editor_init):
+	set the initially selected channel on the histogram combobox.
+	Fixes bug #144225.
+
 2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* app/paint/gimppaintoptions.[ch]: renamed all "pressure-pressure"
