Fixed typo in the Changelog
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13581 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,8 +4,8 @@
 	tool_manager_arrow_key_active to tool_manager_key_press_active.
 
 	* app/display/gimpdisplayshell-callbacks.c: Also dispatch
-	GDK_Return/KP_Enter/BackSpace/Delete to the tools "arrow_key"
-	member of GimpTool probably should be renamed.
+	GDK_Return/KP_Enter/BackSpace/Delete to the tools, the
+	"arrow_key" member of GimpTool probably should be renamed.
 
 	* app/tools/gimpvectortool.c: Use Enter/Return to convert the
 	current path to a selection, use Backspace/Delete to delete the
