2004-06-12  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/sample_colorize.c: reindented, some minor cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13582 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-12  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/sample_colorize.c: reindented, some minor cleanup.
+
 2004-06-12  Simon Budig  <simon@gimp.org>
 
 	* app/tools/tool_manager.[ch]: renamed
