2004-06-12  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.c (gimp_display_shell_init): add
	the file DND destination before all others so the DND code will
	implicitly use its destination properties. Works around Konqueror
	offering only file MOVE, not COPY and fixes bug #144168.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13583 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell.c (gimp_display_shell_init): add
+	the file DND destination before all others so the DND code will
+	implicitly use its destination properties. Works around Konqueror
+	offering only file MOVE, not COPY and fixes bug #144168.
+
 2004-06-12  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/sample_colorize.c: reindented, some minor cleanup.
