--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c
+	(gimp_display_shell_events): ported some forgotten #if 0'ed
+	GtkItemFactory stuff to GtkUIManager.
+
 2004-06-12  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimptool.[ch]: renamed the "arrow_key" member
