--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-12  Sven Neumann  <sven@gimp.org>
+
+	* app/composite/gimp-composite.[ch]: just some cleanup.
+
 2004-06-12  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
