--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-06-12  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpcroptool.c: Make the Enter/Return key do
+	the crop action.
+
+	* app/tools/gimpeditselectiontool.c
+	* app/tools/gimpvectortool.c: Make the _key_press functions
+	safe for non-arrow keys.
+
 2004-06-12  Sven Neumann  <sven@gimp.org>
 
 	* app/composite/gimp-composite.[ch]: just some cleanup.
