2004-06-12  Simon Budig  <simon@gimp.org>
	* app/tools/gimptransformtool.c: Make Enter/Return apply the
	transformation, Backspace/Delete resets the transformation.

	* app/tools/gimpcroptool.c: Simplify the key_press callback.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13588 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-06-12  Simon Budig  <simon@gimp.org>
 
+	* app/tools/gimptransformtool.c: Make Enter/Return apply the
+	transformation, Backspace/Delete resets the transformation.
+
+	* app/tools/gimpcroptool.c: Simplify the key_press callback.
+
+2004-06-12  Simon Budig  <simon@gimp.org>
+
 	* app/tools/gimpcroptool.c: Make the Enter/Return key do
 	the crop action.
 
