2004-06-13  Sven Neumann  <sven@gimp.org>
	* app/core/gimppalette.c (gimp_palette_load): don't use the rather
	inefficient gimp_palette_add_entry() when loading a palette.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13591 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimppalette.c (gimp_palette_load): don't use the rather
+	inefficient gimp_palette_add_entry() when loading a palette.
+
 2004-06-13  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpdata.[ch]: added "gint freeze_count" and
