--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Michael Natterer  <mitch@gimp.org>
+
+	* cursors/gimp-tool-cursors.xcf: added nice new antialiased
+	cursor layers made by Jimmac.
+
 2004-06-13  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimppalette.c (gimp_palette_load): don't use the rather
