2004-06-13  Jakub Steiner <jimmac@ximian.com>
* cursor/*png: updated the cursors


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13593 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-13  Jakub Steiner <jimmac@ximian.com>
+
+	* cursor/*png: updated the cursors
+
 2004-06-13  Michael Natterer  <mitch@gimp.org>
 
 	* cursors/gimp-tool-cursors.xcf: added nice new antialiased
