--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2004-06-13  Jakub Steiner <jimmac@ximian.com>
 
 	* cursors/gimp-tool-cursors.xcf
+	* cursors/tool-zoom.png: make more transparent
+
+2004-06-13  Jakub Steiner <jimmac@ximian.com>
+
+	* cursors/gimp-tool-cursors.xcf
 	* cursors/tool-blur.png
 	* cursors/tool-bucket-fill.png
 	* cursors/tool-dodge.png
