2004-06-13  Sven Neumann  <sven@gimp.org>
	* app/core/gimpdrawable-blend.c (gradient_render_pixel): inline
	the repeat functions.

	* app/core/gimpgradient.c: inline the curve functions.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13596 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-13  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpdrawable-blend.c (gradient_render_pixel): inline
+	the repeat functions.
+
+	* app/core/gimpgradient.c: inline the curve functions.
+
 2004-06-13  Jakub Steiner <jimmac@ximian.com>
 
 	* cursors/gimp-tool-cursors.xcf
