2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/core/gimpdrawable-blend.c: added missing semicolon.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13598 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
 
+	* app/core/gimpdrawable-blend.c: added missing semicolon.
+
+2004-06-12  Philip Lafleur  <plafleur@cvs.gnome.org>
+
 	* app/display/gimpdisplayshell-callbacks.c: Fixed incorrect logic that
 	caused perfect-but-slow pointer tracking to be used in tools that
 	don't request exact mode.
