2004-06-13  Jakub Steiner <jimmac@ximian.com>
* cursors/gimp-tool-cursors.xcf
* cursors/tool-burn.png: the burn tool doesn't really have an
  inverted handle


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13601 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-13  Jakub Steiner <jimmac@ximian.com>
+
+	* cursors/gimp-tool-cursors.xcf
+	* cursors/tool-burn.png: the burn tool doesn't really have an
+	  inverted handle
+
 2004-06-13  Sven Neumann  <sven@gimp.org>
 
 	* app/paint-funcs/paint-funcs.[ch] (shapeburst_region): added
