--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-13  Jakub Steiner <jimmac@ximian.com>
 
+	* cursors/tool-zoom.png:
+	* cursors/cursor-zoom.png: minor fsckup
+
+2004-06-13  Jakub Steiner <jimmac@ximian.com>
+
 	* cursors/gimp-tool-cursors.xcf
 	* cursors/tool-burn.png: the burn tool doesn't really have an
 	  inverted handle
