Oops, forgot to mention Iva as a host...  :)
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13604 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -179,7 +179,8 @@
 	current path to a selection, use Backspace/Delete to delete the
 	currently active anchors in a path.
 
-	Implemented on Jimmacs request - thanks for being a great host  :)
+	Implemented on Jimmacs request - thanks to him and Iva for being
+	a great host  :)
 
 2004-06-12  Sven Neumann  <sven@gimp.org>
 
