2004-06-13  Simon Budig  <simon@gimp.org>
	* app/tools/gimpiscissorstool.c: Minor tweaks to two macros.
	Shouldn't change anything.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13605 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpiscissorstool.c: Minor tweaks to two macros.
+	Shouldn't change anything.
+
 2004-06-13  Jakub Steiner <jimmac@ximian.com>
 
 	* cursors/tool-zoom.png:
