2004-06-13  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/display/gimpdisplayshell-preview.c: use drawable_mask_bounds()
	for texture coordinates instead of the drawable's width and height.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13607 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-13  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/display/gimpdisplayshell-preview.c: use drawable_mask_bounds()
+	for texture coordinates instead of the drawable's width and height.
+
 2004-06-13  Sven Neumann  <sven@gimp.org>
 
 	* app/paint-funcs/paint-funcs.c (shapeburst_region): don't call
