--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-14  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/display/gimpdisplayshell-preview.c: Transformation previews now
+	use the selection mask if it is present.
+
 2004-06-13  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: Make sure PangoFT2 is using a recent enough fontconfig
